solved layout bug

--- a/client/src/styles/movieList.css
+++ b/client/src/styles/movieList.css
@@ -4,7 +4,6 @@
   flex-wrap: wrap;
   height: auto;
   justify-content: center;
-  height: 95vh;
 }
 
 .popularMoviesListContainer #eachMovie{
